--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.3",
-    "styled-components": "^4.3.2"
+    "semantic-ui-react": "^0.87.3"
   },
   "scripts": {
     "start": "react-scripts start",
