--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "sunlights",
+  "homepage": "http://kotaleksei.github.io/companyExample",
+  "name": "companyExample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "redux": "^4.0.4"
   }
 }
